--- a/schoolboysim.kv
+++ b/schoolboysim.kv
@@ -4,7 +4,7 @@
 
 		BoxLayout:
 			Image:
-				source: "data/img/logo.png"
+				source: "logo.png"
 
 		BoxLayout:
 			orientation: 'vertical'
@@ -13,27 +13,27 @@
 				anchor_y: 'center'
 				anchor_x: 'center'
 				MDFillRoundFlatButton:
-					font_name: 'data/ttf/ubuntu.ttf'
-					font_size: "15sp"
-					size_hint: (.6, .65)
+					font_name: 'ubuntu.ttf'
+					font_size: "8sp"
+					size_hint: (.5, .5)
 					text: "Новая игра"
 
 			AnchorLayout:
 				anchor_y: 'center'
 				anchor_x: 'center'
 				MDFillRoundFlatButton:
-					font_name: 'data/ttf/ubuntu.ttf'
-					font_size: "15sp"
-					size_hint: (.6, .65)
+					font_name: 'ubuntu.ttf'
+					font_size: "8sp"
+					size_hint: (.5, .5)
 					text: "Загрузить игру"
 
 			AnchorLayout:
 				anchor_y: 'center'
 				anchor_x: 'center'
 				MDFillRoundFlatButton:
-					font_name: 'data/ttf/ubuntu.ttf'
-					font_size: "15sp"
-					size_hint: (.6, .65)
+					font_name: 'ubuntu.ttf'
+					font_size: "8sp"
+					size_hint: (.5, .5)
 					text: "Инфо"
 
 					on_release:
@@ -56,9 +56,9 @@
 		padding: [0, 0, 0, 30]
 		anchor_y: 'bottom'
 		MDFillRoundFlatButton:
-			font_name: 'data/ttf/ubuntu.ttf'
-			font_size: "15sp"
-			size_hint: (.5, .09)
+			font_name: 'ubuntu.ttf'
+			font_size: "8sp"
+			size_hint: (.45, .07)
 			text: "Назад в меню"
 
 			on_release:
